fix showcase on small screens, style cta

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ p {
 }
 
 .download-button {
-  margin: 5% 3% 5% 0;
+  margin: 3% 3% 2% 0;
 }
 
 .title-image {
@@ -98,21 +98,6 @@ p {
 
 .icon:hover {
   color: #ff4c68;
-}
-
-@media (max-width: 1200px) {
-  h1 {
-    font-size: 2.5rem;
-  }
-  .btn {
-    width: 60%;
-  }
-}
-
-@media (max-width: 768px) {
-  .iphone6 {
-    visibility: hidden;
-  }
 }
 
 /* Testimonials Section */
@@ -162,7 +147,32 @@ p {
   min-width: 220px;
 }
 
+/* CTA */
+
+#cta {
+  background-color: #ff4c68;
+  color: #fff;
+  padding: 7% 15%;
+  text-align: center;
+}
+
+/* Media Queries */
+
 @media (max-width: 1200px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  .btn {
+    width: 60%;
+  }
+  #title {
+    text-align: center;
+  }
+  .title-image {
+    position: static;
+    transform: rotate(0);
+    width: 80%;
+  }
   #bootstrap-override-1 {
     width: 100%;
   }
@@ -175,11 +185,25 @@ p {
     margin: auto;
     width: 50%;
   }
+  #cta .btn {
+    width: 45%;
+  }
 }
 
 @media (max-width: 998px) {
   #bootstrap-override-3 {
     /* margin: auto; */
+    width: 100%;
+  }
+}
+@media (max-width: 568px) {
+
+  #cta h2 {
+    font-size: 2rem;
+    padding-bottom: 30px;
+    /* margin-bottom: 5%; */
+  }
+  #cta .btn {
     width: 100%;
   }
 }
